--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chrome": "0.0.196",
     "@vue/babel-plugin-jsx": "^1.1.1",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "esbuild-loader": "^2.19.0",
     "esbuild-plugin-vue-jsx": "^0.1.0",
+    "prettier": "2.7.1",
     "rimraf": "^3.0.2",
     "vue-loader": "^17.0.0",
     "vue-style-loader": "^4.1.3",
@@ -25,6 +27,8 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "clipboard": "^2.0.11",
+    "vue": "^3.2.37",
+    "vue3-json-viewer": "^2.2.2"
   }
 }
